--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "esp-test-server",
+  "name": "bossofblinks",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Web-controlled LED matrix display",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^5.0.1"
   }
 }
