--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,13 @@
   "description": "Web-controlled LED matrix display",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
